Project1/Project1/YAC.output
Terminals unused in grammar

   CLASS
   STRUCT
   LLAVEIZ
   LLAVEDER


Rules useless in parser due to conflicts

    7 INICIOS: /* empty */


State 0 conflicts: 10 shift/reduce, 1 reduce/reduce
State 2 conflicts: 1 shift/reduce
State 3 conflicts: 1 shift/reduce
State 4 conflicts: 1 shift/reduce
State 5 conflicts: 1 shift/reduce
State 6 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 12 conflicts: 10 shift/reduce, 1 reduce/reduce
State 50 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: /* empty */
    2  | INICIOS S

    3 INICIOS: FUNCIONES
    4        | IFYCICLO
    5        | DECLARACION
    6        | error PUNTOCOMA
    7        | /* empty */

    8 VARIABLE: INT
    9         | DOUBLE
   10         | FLOAT
   11         | STRING
   12         | CHAR
   13         | BOOLEAN

   14 FUNCIONES: VARIABLE ID PARENTESISIZ PARENTESISDER
   15          | VARIABLE ID PARENTESISIZ VARIABLE ID PARAMETROS PARENTESISDER
   16          | VARIABLE ID PARENTESISIZ ID PARAMETROS PARENTESISDER

   17 DECLARACION: VARIABLE ID VAR PUNTOCOMA
   18            | VARIABLE BRACKETIZ BRACKETDER ID VAR PUNTOCOMA
   19            | INT ID IGUAL ENTERO PUNTOCOMA
   20            | INT ID IGUAL EXPARIT PUNTOCOMA
   21            | DOUBLE ID IGUAL DECIMAL PUNTOCOMA
   22            | FLOAT ID IGUAL DECIMAL PUNTOCOMA
   23            | STRING ID IGUAL CADENA PUNTOCOMA
   24            | CHAR ID IGUAL CARACTER PUNTOCOMA
   25            | BOOLEAN ID IGUAL BOOL PUNTOCOMA

   26 BOOL: TRUE
   27     | FALSE

   28 PARAMETROS: /* empty */
   29           | COMA VARIABLE ID PARAMETROS
   30           | COMA ID PARAMETROS

   31 VAR: /* empty */
   32    | COMA ID VAR

   33 OPERACION: MAS
   34          | MENOS
   35          | ASTERISCO
   36          | DIAGONAL
   37          | PORCENTAJE

   38 EXPARIT: NUMERO OPERACION EXPARIT
   39        | ID OPERACION EXPARIT
   40        | ID
   41        | NUMERO

   42 NUMERO: /* empty */
   43       | ENTERO
   44       | DECIMAL

   45 CONDICIONES: MAYORQUE
   46            | MENORQUE
   47            | IGUALDAD
   48            | DIFERENTEDE
   49            | MAYORQUE IGUAL
   50            | MENORQUE IGUAL

   51 OPERADORBOOL: AND
   52             | OR

   53 CONDAUX: /* empty */
   54        | OPERADORBOOL CONDICION

   55 CONDICION: ID CONDICIONES NUMERO CONDAUX
   56          | ID CONDICIONES ID CONDAUX
   57          | NUMERO CONDICIONES NUMERO CONDAUX
   58          | NUMERO CONDICIONES ID CONDAUX
   59          | ID CONDAUX
   60          | EXCLAMACION ID CONDAUX

   61 IFYCICLO: IF PARENTESISIZ CONDICION PARENTESISDER
   62         | WHILE PARENTESISIZ CONDICION PARENTESISDER
   63         | FOR PARENTESISIZ INT ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 8 19 20 63
DOUBLE (259) 9 21
FLOAT (260) 10 22
STRING (261) 11 23
BOOLEAN (262) 13 25
CHAR (263) 12 24
CLASS (264)
STRUCT (265)
FOR (266) 63
WHILE (267) 62
IF (268) 61
TRUE (269) 26
FALSE (270) 27
ID (271) 14 15 16 17 18 19 20 21 22 23 24 25 29 30 32 39 40 55 56 58
    59 60 63
ENTERO (272) 19 43 63
DECIMAL (273) 21 22 44
CADENA (274) 23
CARACTER (275) 24
PARENTESISIZ (276) 14 15 16 61 62 63
PARENTESISDER (277) 14 15 16 61 62 63
LLAVEIZ (278)
LLAVEDER (279)
BRACKETIZ (280) 18
BRACKETDER (281) 18
COMA (282) 29 30 32
PUNTOCOMA (283) 6 17 18 19 20 21 22 23 24 25 63
IGUAL (284) 19 20 21 22 23 24 25 49 50 63
ASTERISCO (285) 35
DIAGONAL (286) 36
MAS (287) 33 63
MENOS (288) 34
PORCENTAJE (289) 37
EXCLAMACION (290) 60
IGUALDAD (291) 47
DIFERENTEDE (292) 48
MAYORQUE (293) 45 49
MENORQUE (294) 46 50
AND (295) 51
OR (296) 52


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
S (43)
    on left: 1 2, on right: 0 2
INICIOS (44)
    on left: 3 4 5 6 7, on right: 2
VARIABLE (45)
    on left: 8 9 10 11 12 13, on right: 14 15 16 17 18 29
FUNCIONES (46)
    on left: 14 15 16, on right: 3
DECLARACION (47)
    on left: 17 18 19 20 21 22 23 24 25, on right: 5
BOOL (48)
    on left: 26 27, on right: 25
PARAMETROS (49)
    on left: 28 29 30, on right: 15 16 29 30
VAR (50)
    on left: 31 32, on right: 17 18 32
OPERACION (51)
    on left: 33 34 35 36 37, on right: 38 39
EXPARIT (52)
    on left: 38 39 40 41, on right: 20 38 39
NUMERO (53)
    on left: 42 43 44, on right: 38 41 55 57 58
CONDICIONES (54)
    on left: 45 46 47 48 49 50, on right: 55 56 57 58
OPERADORBOOL (55)
    on left: 51 52, on right: 54
CONDAUX (56)
    on left: 53 54, on right: 55 56 57 58 59 60
CONDICION (57)
    on left: 55 56 57 58 59 60, on right: 54 61 62 63
IFYCICLO (58)
    on left: 61 62 63, on right: 4


State 0

    0 $accept: . S $end

    error    shift, and go to state 1
    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    CHAR     shift, and go to state 7
    FOR      shift, and go to state 8
    WHILE    shift, and go to state 9
    IF       shift, and go to state 10

    $end     reduce using rule 1 (S)
    $end     [reduce using rule 7 (INICIOS)]
    error    [reduce using rule 7 (INICIOS)]
    INT      [reduce using rule 7 (INICIOS)]
    DOUBLE   [reduce using rule 7 (INICIOS)]
    FLOAT    [reduce using rule 7 (INICIOS)]
    STRING   [reduce using rule 7 (INICIOS)]
    BOOLEAN  [reduce using rule 7 (INICIOS)]
    CHAR     [reduce using rule 7 (INICIOS)]
    FOR      [reduce using rule 7 (INICIOS)]
    WHILE    [reduce using rule 7 (INICIOS)]
    IF       [reduce using rule 7 (INICIOS)]

    S            go to state 11
    INICIOS      go to state 12
    VARIABLE     go to state 13
    FUNCIONES    go to state 14
    DECLARACION  go to state 15
    IFYCICLO     go to state 16


State 1

    6 INICIOS: error . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 17


State 2

    8 VARIABLE: INT .
   19 DECLARACION: INT . ID IGUAL ENTERO PUNTOCOMA
   20            | INT . ID IGUAL EXPARIT PUNTOCOMA

    ID  shift, and go to state 18

    ID        [reduce using rule 8 (VARIABLE)]
    $default  reduce using rule 8 (VARIABLE)


State 3

    9 VARIABLE: DOUBLE .
   21 DECLARACION: DOUBLE . ID IGUAL DECIMAL PUNTOCOMA

    ID  shift, and go to state 19

    ID        [reduce using rule 9 (VARIABLE)]
    $default  reduce using rule 9 (VARIABLE)


State 4

   10 VARIABLE: FLOAT .
   22 DECLARACION: FLOAT . ID IGUAL DECIMAL PUNTOCOMA

    ID  shift, and go to state 20

    ID        [reduce using rule 10 (VARIABLE)]
    $default  reduce using rule 10 (VARIABLE)


State 5

   11 VARIABLE: STRING .
   23 DECLARACION: STRING . ID IGUAL CADENA PUNTOCOMA

    ID  shift, and go to state 21

    ID        [reduce using rule 11 (VARIABLE)]
    $default  reduce using rule 11 (VARIABLE)


State 6

   13 VARIABLE: BOOLEAN .
   25 DECLARACION: BOOLEAN . ID IGUAL BOOL PUNTOCOMA

    ID  shift, and go to state 22

    ID        [reduce using rule 13 (VARIABLE)]
    $default  reduce using rule 13 (VARIABLE)


State 7

   12 VARIABLE: CHAR .
   24 DECLARACION: CHAR . ID IGUAL CARACTER PUNTOCOMA

    ID  shift, and go to state 23

    ID        [reduce using rule 12 (VARIABLE)]
    $default  reduce using rule 12 (VARIABLE)


State 8

   63 IFYCICLO: FOR . PARENTESISIZ INT ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    PARENTESISIZ  shift, and go to state 24


State 9

   62 IFYCICLO: WHILE . PARENTESISIZ CONDICION PARENTESISDER

    PARENTESISIZ  shift, and go to state 25


State 10

   61 IFYCICLO: IF . PARENTESISIZ CONDICION PARENTESISDER

    PARENTESISIZ  shift, and go to state 26


State 11

    0 $accept: S . $end

    $end  shift, and go to state 27


State 12

    2 S: INICIOS . S

    error    shift, and go to state 1
    INT      shift, and go to state 2
    DOUBLE   shift, and go to state 3
    FLOAT    shift, and go to state 4
    STRING   shift, and go to state 5
    BOOLEAN  shift, and go to state 6
    CHAR     shift, and go to state 7
    FOR      shift, and go to state 8
    WHILE    shift, and go to state 9
    IF       shift, and go to state 10

    $end     reduce using rule 1 (S)
    $end     [reduce using rule 7 (INICIOS)]
    error    [reduce using rule 7 (INICIOS)]
    INT      [reduce using rule 7 (INICIOS)]
    DOUBLE   [reduce using rule 7 (INICIOS)]
    FLOAT    [reduce using rule 7 (INICIOS)]
    STRING   [reduce using rule 7 (INICIOS)]
    BOOLEAN  [reduce using rule 7 (INICIOS)]
    CHAR     [reduce using rule 7 (INICIOS)]
    FOR      [reduce using rule 7 (INICIOS)]
    WHILE    [reduce using rule 7 (INICIOS)]
    IF       [reduce using rule 7 (INICIOS)]

    S            go to state 28
    INICIOS      go to state 12
    VARIABLE     go to state 13
    FUNCIONES    go to state 14
    DECLARACION  go to state 15
    IFYCICLO     go to state 16


State 13

   14 FUNCIONES: VARIABLE . ID PARENTESISIZ PARENTESISDER
   15          | VARIABLE . ID PARENTESISIZ VARIABLE ID PARAMETROS PARENTESISDER
   16          | VARIABLE . ID PARENTESISIZ ID PARAMETROS PARENTESISDER
   17 DECLARACION: VARIABLE . ID VAR PUNTOCOMA
   18            | VARIABLE . BRACKETIZ BRACKETDER ID VAR PUNTOCOMA

    ID         shift, and go to state 29
    BRACKETIZ  shift, and go to state 30


State 14

    3 INICIOS: FUNCIONES .

    $default  reduce using rule 3 (INICIOS)


State 15

    5 INICIOS: DECLARACION .

    $default  reduce using rule 5 (INICIOS)


State 16

    4 INICIOS: IFYCICLO .

    $default  reduce using rule 4 (INICIOS)


State 17

    6 INICIOS: error PUNTOCOMA .

    $default  reduce using rule 6 (INICIOS)


State 18

   19 DECLARACION: INT ID . IGUAL ENTERO PUNTOCOMA
   20            | INT ID . IGUAL EXPARIT PUNTOCOMA

    IGUAL  shift, and go to state 31


State 19

   21 DECLARACION: DOUBLE ID . IGUAL DECIMAL PUNTOCOMA

    IGUAL  shift, and go to state 32


State 20

   22 DECLARACION: FLOAT ID . IGUAL DECIMAL PUNTOCOMA

    IGUAL  shift, and go to state 33


State 21

   23 DECLARACION: STRING ID . IGUAL CADENA PUNTOCOMA

    IGUAL  shift, and go to state 34


State 22

   25 DECLARACION: BOOLEAN ID . IGUAL BOOL PUNTOCOMA

    IGUAL  shift, and go to state 35


State 23

   24 DECLARACION: CHAR ID . IGUAL CARACTER PUNTOCOMA

    IGUAL  shift, and go to state 36


State 24

   63 IFYCICLO: FOR PARENTESISIZ . INT ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    INT  shift, and go to state 37


State 25

   62 IFYCICLO: WHILE PARENTESISIZ . CONDICION PARENTESISDER

    ID           shift, and go to state 38
    ENTERO       shift, and go to state 39
    DECIMAL      shift, and go to state 40
    EXCLAMACION  shift, and go to state 41

    $default  reduce using rule 42 (NUMERO)

    NUMERO     go to state 42
    CONDICION  go to state 43


State 26

   61 IFYCICLO: IF PARENTESISIZ . CONDICION PARENTESISDER

    ID           shift, and go to state 38
    ENTERO       shift, and go to state 39
    DECIMAL      shift, and go to state 40
    EXCLAMACION  shift, and go to state 41

    $default  reduce using rule 42 (NUMERO)

    NUMERO     go to state 42
    CONDICION  go to state 44


State 27

    0 $accept: S $end .

    $default  accept


State 28

    2 S: INICIOS S .

    $default  reduce using rule 2 (S)


State 29

   14 FUNCIONES: VARIABLE ID . PARENTESISIZ PARENTESISDER
   15          | VARIABLE ID . PARENTESISIZ VARIABLE ID PARAMETROS PARENTESISDER
   16          | VARIABLE ID . PARENTESISIZ ID PARAMETROS PARENTESISDER
   17 DECLARACION: VARIABLE ID . VAR PUNTOCOMA

    PARENTESISIZ  shift, and go to state 45
    COMA          shift, and go to state 46

    $default  reduce using rule 31 (VAR)

    VAR  go to state 47


State 30

   18 DECLARACION: VARIABLE BRACKETIZ . BRACKETDER ID VAR PUNTOCOMA

    BRACKETDER  shift, and go to state 48


State 31

   19 DECLARACION: INT ID IGUAL . ENTERO PUNTOCOMA
   20            | INT ID IGUAL . EXPARIT PUNTOCOMA

    ID       shift, and go to state 49
    ENTERO   shift, and go to state 50
    DECIMAL  shift, and go to state 40

    $default  reduce using rule 42 (NUMERO)

    EXPARIT  go to state 51
    NUMERO   go to state 52


State 32

   21 DECLARACION: DOUBLE ID IGUAL . DECIMAL PUNTOCOMA

    DECIMAL  shift, and go to state 53


State 33

   22 DECLARACION: FLOAT ID IGUAL . DECIMAL PUNTOCOMA

    DECIMAL  shift, and go to state 54


State 34

   23 DECLARACION: STRING ID IGUAL . CADENA PUNTOCOMA

    CADENA  shift, and go to state 55


State 35

   25 DECLARACION: BOOLEAN ID IGUAL . BOOL PUNTOCOMA

    TRUE   shift, and go to state 56
    FALSE  shift, and go to state 57

    BOOL  go to state 58


State 36

   24 DECLARACION: CHAR ID IGUAL . CARACTER PUNTOCOMA

    CARACTER  shift, and go to state 59


State 37

   63 IFYCICLO: FOR PARENTESISIZ INT . ID IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    ID  shift, and go to state 60


State 38

   55 CONDICION: ID . CONDICIONES NUMERO CONDAUX
   56          | ID . CONDICIONES ID CONDAUX
   59          | ID . CONDAUX

    IGUALDAD     shift, and go to state 61
    DIFERENTEDE  shift, and go to state 62
    MAYORQUE     shift, and go to state 63
    MENORQUE     shift, and go to state 64
    AND          shift, and go to state 65
    OR           shift, and go to state 66

    $default  reduce using rule 53 (CONDAUX)

    CONDICIONES   go to state 67
    OPERADORBOOL  go to state 68
    CONDAUX       go to state 69


State 39

   43 NUMERO: ENTERO .

    $default  reduce using rule 43 (NUMERO)


State 40

   44 NUMERO: DECIMAL .

    $default  reduce using rule 44 (NUMERO)


State 41

   60 CONDICION: EXCLAMACION . ID CONDAUX

    ID  shift, and go to state 70


State 42

   57 CONDICION: NUMERO . CONDICIONES NUMERO CONDAUX
   58          | NUMERO . CONDICIONES ID CONDAUX

    IGUALDAD     shift, and go to state 61
    DIFERENTEDE  shift, and go to state 62
    MAYORQUE     shift, and go to state 63
    MENORQUE     shift, and go to state 64

    CONDICIONES  go to state 71


State 43

   62 IFYCICLO: WHILE PARENTESISIZ CONDICION . PARENTESISDER

    PARENTESISDER  shift, and go to state 72


State 44

   61 IFYCICLO: IF PARENTESISIZ CONDICION . PARENTESISDER

    PARENTESISDER  shift, and go to state 73


State 45

   14 FUNCIONES: VARIABLE ID PARENTESISIZ . PARENTESISDER
   15          | VARIABLE ID PARENTESISIZ . VARIABLE ID PARAMETROS PARENTESISDER
   16          | VARIABLE ID PARENTESISIZ . ID PARAMETROS PARENTESISDER

    INT            shift, and go to state 74
    DOUBLE         shift, and go to state 75
    FLOAT          shift, and go to state 76
    STRING         shift, and go to state 77
    BOOLEAN        shift, and go to state 78
    CHAR           shift, and go to state 79
    ID             shift, and go to state 80
    PARENTESISDER  shift, and go to state 81

    VARIABLE  go to state 82


State 46

   32 VAR: COMA . ID VAR

    ID  shift, and go to state 83


State 47

   17 DECLARACION: VARIABLE ID VAR . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 84


State 48

   18 DECLARACION: VARIABLE BRACKETIZ BRACKETDER . ID VAR PUNTOCOMA

    ID  shift, and go to state 85


State 49

   39 EXPARIT: ID . OPERACION EXPARIT
   40        | ID .

    ASTERISCO   shift, and go to state 86
    DIAGONAL    shift, and go to state 87
    MAS         shift, and go to state 88
    MENOS       shift, and go to state 89
    PORCENTAJE  shift, and go to state 90

    $default  reduce using rule 40 (EXPARIT)

    OPERACION  go to state 91


State 50

   19 DECLARACION: INT ID IGUAL ENTERO . PUNTOCOMA
   43 NUMERO: ENTERO .

    PUNTOCOMA  shift, and go to state 92

    PUNTOCOMA  [reduce using rule 43 (NUMERO)]
    $default   reduce using rule 43 (NUMERO)


State 51

   20 DECLARACION: INT ID IGUAL EXPARIT . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 93


State 52

   38 EXPARIT: NUMERO . OPERACION EXPARIT
   41        | NUMERO .

    ASTERISCO   shift, and go to state 86
    DIAGONAL    shift, and go to state 87
    MAS         shift, and go to state 88
    MENOS       shift, and go to state 89
    PORCENTAJE  shift, and go to state 90

    $default  reduce using rule 41 (EXPARIT)

    OPERACION  go to state 94


State 53

   21 DECLARACION: DOUBLE ID IGUAL DECIMAL . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 95


State 54

   22 DECLARACION: FLOAT ID IGUAL DECIMAL . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 96


State 55

   23 DECLARACION: STRING ID IGUAL CADENA . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 97


State 56

   26 BOOL: TRUE .

    $default  reduce using rule 26 (BOOL)


State 57

   27 BOOL: FALSE .

    $default  reduce using rule 27 (BOOL)


State 58

   25 DECLARACION: BOOLEAN ID IGUAL BOOL . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 98


State 59

   24 DECLARACION: CHAR ID IGUAL CARACTER . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 99


State 60

   63 IFYCICLO: FOR PARENTESISIZ INT ID . IGUAL ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    IGUAL  shift, and go to state 100


State 61

   47 CONDICIONES: IGUALDAD .

    $default  reduce using rule 47 (CONDICIONES)


State 62

   48 CONDICIONES: DIFERENTEDE .

    $default  reduce using rule 48 (CONDICIONES)


State 63

   45 CONDICIONES: MAYORQUE .
   49            | MAYORQUE . IGUAL

    IGUAL  shift, and go to state 101

    $default  reduce using rule 45 (CONDICIONES)


State 64

   46 CONDICIONES: MENORQUE .
   50            | MENORQUE . IGUAL

    IGUAL  shift, and go to state 102

    $default  reduce using rule 46 (CONDICIONES)


State 65

   51 OPERADORBOOL: AND .

    $default  reduce using rule 51 (OPERADORBOOL)


State 66

   52 OPERADORBOOL: OR .

    $default  reduce using rule 52 (OPERADORBOOL)


State 67

   55 CONDICION: ID CONDICIONES . NUMERO CONDAUX
   56          | ID CONDICIONES . ID CONDAUX

    ID       shift, and go to state 103
    ENTERO   shift, and go to state 39
    DECIMAL  shift, and go to state 40

    $default  reduce using rule 42 (NUMERO)

    NUMERO  go to state 104


State 68

   54 CONDAUX: OPERADORBOOL . CONDICION

    ID           shift, and go to state 38
    ENTERO       shift, and go to state 39
    DECIMAL      shift, and go to state 40
    EXCLAMACION  shift, and go to state 41

    $default  reduce using rule 42 (NUMERO)

    NUMERO     go to state 42
    CONDICION  go to state 105


State 69

   59 CONDICION: ID CONDAUX .

    $default  reduce using rule 59 (CONDICION)


State 70

   60 CONDICION: EXCLAMACION ID . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 53 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 106


State 71

   57 CONDICION: NUMERO CONDICIONES . NUMERO CONDAUX
   58          | NUMERO CONDICIONES . ID CONDAUX

    ID       shift, and go to state 107
    ENTERO   shift, and go to state 39
    DECIMAL  shift, and go to state 40

    $default  reduce using rule 42 (NUMERO)

    NUMERO  go to state 108


State 72

   62 IFYCICLO: WHILE PARENTESISIZ CONDICION PARENTESISDER .

    $default  reduce using rule 62 (IFYCICLO)


State 73

   61 IFYCICLO: IF PARENTESISIZ CONDICION PARENTESISDER .

    $default  reduce using rule 61 (IFYCICLO)


State 74

    8 VARIABLE: INT .

    $default  reduce using rule 8 (VARIABLE)


State 75

    9 VARIABLE: DOUBLE .

    $default  reduce using rule 9 (VARIABLE)


State 76

   10 VARIABLE: FLOAT .

    $default  reduce using rule 10 (VARIABLE)


State 77

   11 VARIABLE: STRING .

    $default  reduce using rule 11 (VARIABLE)


State 78

   13 VARIABLE: BOOLEAN .

    $default  reduce using rule 13 (VARIABLE)


State 79

   12 VARIABLE: CHAR .

    $default  reduce using rule 12 (VARIABLE)


State 80

   16 FUNCIONES: VARIABLE ID PARENTESISIZ ID . PARAMETROS PARENTESISDER

    COMA  shift, and go to state 109

    $default  reduce using rule 28 (PARAMETROS)

    PARAMETROS  go to state 110


State 81

   14 FUNCIONES: VARIABLE ID PARENTESISIZ PARENTESISDER .

    $default  reduce using rule 14 (FUNCIONES)


State 82

   15 FUNCIONES: VARIABLE ID PARENTESISIZ VARIABLE . ID PARAMETROS PARENTESISDER

    ID  shift, and go to state 111


State 83

   32 VAR: COMA ID . VAR

    COMA  shift, and go to state 46

    $default  reduce using rule 31 (VAR)

    VAR  go to state 112


State 84

   17 DECLARACION: VARIABLE ID VAR PUNTOCOMA .

    $default  reduce using rule 17 (DECLARACION)


State 85

   18 DECLARACION: VARIABLE BRACKETIZ BRACKETDER ID . VAR PUNTOCOMA

    COMA  shift, and go to state 46

    $default  reduce using rule 31 (VAR)

    VAR  go to state 113


State 86

   35 OPERACION: ASTERISCO .

    $default  reduce using rule 35 (OPERACION)


State 87

   36 OPERACION: DIAGONAL .

    $default  reduce using rule 36 (OPERACION)


State 88

   33 OPERACION: MAS .

    $default  reduce using rule 33 (OPERACION)


State 89

   34 OPERACION: MENOS .

    $default  reduce using rule 34 (OPERACION)


State 90

   37 OPERACION: PORCENTAJE .

    $default  reduce using rule 37 (OPERACION)


State 91

   39 EXPARIT: ID OPERACION . EXPARIT

    ID       shift, and go to state 49
    ENTERO   shift, and go to state 39
    DECIMAL  shift, and go to state 40

    $default  reduce using rule 42 (NUMERO)

    EXPARIT  go to state 114
    NUMERO   go to state 52


State 92

   19 DECLARACION: INT ID IGUAL ENTERO PUNTOCOMA .

    $default  reduce using rule 19 (DECLARACION)


State 93

   20 DECLARACION: INT ID IGUAL EXPARIT PUNTOCOMA .

    $default  reduce using rule 20 (DECLARACION)


State 94

   38 EXPARIT: NUMERO OPERACION . EXPARIT

    ID       shift, and go to state 49
    ENTERO   shift, and go to state 39
    DECIMAL  shift, and go to state 40

    $default  reduce using rule 42 (NUMERO)

    EXPARIT  go to state 115
    NUMERO   go to state 52


State 95

   21 DECLARACION: DOUBLE ID IGUAL DECIMAL PUNTOCOMA .

    $default  reduce using rule 21 (DECLARACION)


State 96

   22 DECLARACION: FLOAT ID IGUAL DECIMAL PUNTOCOMA .

    $default  reduce using rule 22 (DECLARACION)


State 97

   23 DECLARACION: STRING ID IGUAL CADENA PUNTOCOMA .

    $default  reduce using rule 23 (DECLARACION)


State 98

   25 DECLARACION: BOOLEAN ID IGUAL BOOL PUNTOCOMA .

    $default  reduce using rule 25 (DECLARACION)


State 99

   24 DECLARACION: CHAR ID IGUAL CARACTER PUNTOCOMA .

    $default  reduce using rule 24 (DECLARACION)


State 100

   63 IFYCICLO: FOR PARENTESISIZ INT ID IGUAL . ENTERO PUNTOCOMA CONDICION PUNTOCOMA ID MAS MAS PARENTESISDER

    ENTERO  shift, and go to state 116


State 101

   49 CONDICIONES: MAYORQUE IGUAL .

    $default  reduce using rule 49 (CONDICIONES)


State 102

   50 CONDICIONES: MENORQUE IGUAL .

    $default  reduce using rule 50 (CONDICIONES)


State 103

   56 CONDICION: ID CONDICIONES ID . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 53 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 117


State 104

   55 CONDICION: ID CONDICIONES NUMERO . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 53 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 118


State 105

   54 CONDAUX: OPERADORBOOL CONDICION .

    $default  reduce using rule 54 (CONDAUX)


State 106

   60 CONDICION: EXCLAMACION ID CONDAUX .

    $default  reduce using rule 60 (CONDICION)


State 107

   58 CONDICION: NUMERO CONDICIONES ID . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 53 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 119


State 108

   57 CONDICION: NUMERO CONDICIONES NUMERO . CONDAUX

    AND  shift, and go to state 65
    OR   shift, and go to state 66

    $default  reduce using rule 53 (CONDAUX)

    OPERADORBOOL  go to state 68
    CONDAUX       go to state 120


State 109

   29 PARAMETROS: COMA . VARIABLE ID PARAMETROS
   30           | COMA . ID PARAMETROS

    INT      shift, and go to state 74
    DOUBLE   shift, and go to state 75
    FLOAT    shift, and go to state 76
    STRING   shift, and go to state 77
    BOOLEAN  shift, and go to state 78
    CHAR     shift, and go to state 79
    ID       shift, and go to state 121

    VARIABLE  go to state 122


State 110
